@@ -1,3 +1,9 @@
+2005-03-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* ospf_vty.c (show_ip_ospf_interface_sub): Display interface MTU and
+	bandwidth; this is useful for debugging problems.  Also, the function
+	should be static.
+
 2005-03-27 Hasso Tepper <hasso at quagga.net>
 
 	* ospf_snmp.c: Don't crash in snmp query if ospf instance doesn't
